# TESSERA

./: .gitattributes  .gitignore  AGENTS.md  README.md  README_90_SECONDS.md  TESSERA_ENGINE_V0_2_0_RUNTIME_LOOP_COMPILER_PATCH.md  TESSERA_ENGINE_V0_2_6_PASTE_SAFE_LOOPBOOK_GATE_PATCH.md  TESSERA_ENGINE_V0_2_7_FAILURE_LESSONS_CHART_GATE_PATCH.md  TESSERA_ENGINE_V0_2_8_PYTHON_LOOP_KERNEL_PATCH.md  _test_out.txt  build_agnt_pkg.mjs  check_result.py  diag_nab.py  download_yahoo_s5.js  fix_bridge_version.js  fix_cli_clean.py  fix_cli_final.py  fix_cli_imports.py  fix_cli_lines.py  fix_evo048_tests.py  fix_latency_budget.py  fix_latency_test.py  fix_test_import.py  fix_truncated_imports.py  patch_cli.py  patch_cli2.py  patch_cli3.py  pyproject.toml  reg.py  register_tessera.py  run_bridge_tests.py  run_evo051.py  run_nab_direct.py  run_nab_ev052.py  run_nab_eval.py  run_nab_timed.py  tessera.agnt  test_agnt_live.py  test_agnt_zip.py  test_cal_fix.py  (+3 more)
agent_cli_mirror/: AGENT_CLI_MIRROR_CONTRACT.md  LEARNED_LESSONS.md  README.md  agent_mirror.py
agnt-plugin/: README.md  manifest.json  package.json
configs/: README.md  default.json  production.json
dashboard/: data.json  index.html
datasets/: README.md
docs/: README.md
outputs/: README.md
rcc/: README.md
reports/: README.md
scripts/: README.md  run-tessera-full-loop.ps1  run-tessera-full-loop.sh  tessera-agent.ps1  tessera-agent.sh  tessera-dual-console.ps1  tessera-shell.ps1  tessera-watch.ps1  tessera-worker.ps1  tessera_alignment_rcc_nexus_all_one_v0_1_1.ps1  tessera_all_one_v0_1.ps1  tessera_readme_nexus_discipline_all_one_v0_1_2.ps1
src/: README.md
tests/: README.md  test_bounded_neural_residual.py  test_checkpoint_admission.py  test_effective_geometry_readiness.py  test_effective_session_geometry.py  test_evo043.py  test_evo044.py  test_evo045.py  test_evo047.py  test_evo048.py  test_evo049.py  test_evo050.py  test_evo12.py  test_evo13.py  test_evolution_phases.py  test_failure_recovery_readiness.py  (+23 more)
(+644 files in other folders)
