[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tessera"
version = "0.2.0"
description = "TESSERA Engine v0.2.0: sparse compressive memory runtime with ASCII loop compiler, RCC Nexus geometry, and evidence-bound transfer discipline."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="James Paul Jackson"}]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "matplotlib>=3.6",
  "scikit-learn>=1.2",
  "torch>=2.0"
]

[project.scripts]
tessera = "tessera.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
