[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tessera"
version = "0.3.2"
description = "TESSERA Engine v0.3.2: supervised sparse-neural trust routing with deterministic incident containment, replay admission, release verification, and fail-closed authority."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="James Paul Jackson"}]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "matplotlib>=3.6",
  "scikit-learn>=1.2",
  "torch>=2.0",
  "psutil>=5.9"
]

[project.scripts]
tessera = "tessera.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
